--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>03 - Basic Scene</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <canvas class="webgl"></canvas>
+    <script src="three.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
